i made some changes

--- a/styles.css
+++ b/styles.css
@@ -148,31 +148,31 @@ body {
 
 /* images */
 #section1 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_0326.jpg);
+  background-image: url(IMG_0326.jpg);
 }
 #section2 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_0178.jpg);
+  background-image: url(IMG_0178.jpg);
 }
 #section3 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_1345.jpg);
+  background-image: url(IMG_1345.jpg);
 }
 #section4 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_2024.jpg);
+  background-image: url(IMG_2024.jpg);
 }
 #section5 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_5007.jpg);
+  background-image: url(IMG_5007.jpg);
 }
 #section6 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_6645.jpg);
+  background-image: url(IMG_6645.jpg);
 }
 #section7 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_1416.jpg);
+  background-image: url(IMG_1416.jpg);
 }
 #section8 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_3408.jpg);
+  background-image: url(IMG_3408.jpg);
 }
 #section9 .content-item-img {
-  background-image: url(/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/home/IMG_6595.jpg);
+  background-image: url(IMG_6595.jpg);
 }
 
 /* letters and images appearing - linked with js */
